--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -22,6 +22,9 @@
     <string name="ui_crash_title">問題が発生しました。</string>
     <string name="ui_crash_text">プリを再度起動してください。</string>
 
+    <string name="ui_error_get_data">データの取得に失敗しましたa</string>
+    <string name="ui_error_get_data_more">データの取得に失敗しました</string>
+
     <!-- content description, not for UI-->
     <string name="desc_btn_back">戻る</string>
     <string name="desc_btn_setting">設定</string>
